--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/arumugasundar/pdf-merge-nodejs-app#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.17.3",
+    "nodemon": "^2.0.15",
     "pdf-merger-js": "^3.4.0"
   }
 }
